fix: integration test getFirst